--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -2,6 +2,7 @@
     <thead class="igx-grid__thead" role="rowgroup">
         <tr class="igx-grid__tr" role="rowheader">
             <template ngFor let-col [ngForOf]="columnsToRender" let-colIndex="index">
+
                 <th (onSort)="processSort($event)"
                     role="columnheader" tabindex="0"
                     class="igx-grid__th"
@@ -11,14 +12,22 @@
                     [igxDroppable]="col.index"
                     [igxColumnSorting]="col"
                     *ngIf="col.headerTemplate" [style.width]="col.width || ''">
-                    <igx-cell-header [column]="col" [colIndex]="index"></igx-cell-header>
-                    <igx-col-filter
-                        (onFilter)="processFilter($event)"
-                        *ngIf="col.filtering"
-                        [value]="filteringExpressions[col.field]?.searchVal || ''"
-                        [column]="col">
-                    </igx-col-filter>
+
+
+                    <div class="igx-grid__th-content">
+                        <span class="title">
+                            <igx-cell-header [column]="col" [colIndex]="index"></igx-cell-header>
+                        </span>
+                        <igx-col-filter
+                            (onFilter)="processFilter($event)"
+                            *ngIf="col.filtering"
+                            [value]="filteringExpressions[col.field]?.searchVal || ''"
+                            [column]="col">
+                        </igx-col-filter>
+                    </div>
+
                 </th>
+
                 <th (onSort)="processSort($event)"
                     role="columnheader" tabindex="0"
                     class="igx-grid__th"
@@ -28,12 +37,15 @@
                     [igxDroppable]="col.index"
                     [igxColumnSorting]="col"
                     *ngIf="!col.headerTemplate" [style.width]="col.width || ''">
-                    {{ col.header || col.field }}
-                    <igx-col-filter
-                        (onFilter)="processFilter($event)"
-                        *ngIf="col.filtering" [value]="filteringExpressions[col.field]?.searchVal || ''"
-                        [column]="col">
-                    </igx-col-filter>
+
+                    <div class="igx-grid__th-content">
+                        <span class="title">{{ col.header || col.field }}</span>
+                        <igx-col-filter
+                            (onFilter)="processFilter($event)"
+                            *ngIf="col.filtering" [value]="filteringExpressions[col.field]?.searchVal || ''"
+                            [column]="col">
+                        </igx-col-filter>                     
+                    </div>
                 </th>
             </template>
         </tr>
