--- a/src/themes/material/extends/_card.scss
+++ b/src/themes/material/extends/_card.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    flex: 1 0 auto;
+    flex: 1 0 100%;
     padding: $card-heading-padding;
 }
 
