--- a/src/themes/material/modules/_grid.scss
+++ b/src/themes/material/modules/_grid.scss
@@ -20,6 +20,10 @@
 
     @include e(tr) {
         @extend %grid-row;
+
+        @include m(selected) {
+            @extend %grid-row--selected;
+        }
     }
 
     @include e(th) {
@@ -67,6 +71,10 @@
 
     @include e(td) {
         @extend %grid-cell-display;
+
+        @include m(selected) {
+            @extend %grid-cell--selected;
+        }
 
         @include m(number) {
             @extend %grid-cell-number;
