Reworked grid sample.
Changed sort direction to property so the grid can reflect the sorting state.
Selection style classes do not apply on templated cells.

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -11,6 +11,7 @@
                     [igxDraggable]="col.index"
                     [igxDroppable]="col.index"
                     [igxColumnSorting]="col"
+                    [sortDirection]="getSortedExpression(col)"
                     [style.width]="col.width || ''">
                     <div class="igx-grid__th-content">
                         <span class="title">
