(ADD) Initial animations

--- a/src/themes/utilities/_mixins.scss
+++ b/src/themes/utilities/_mixins.scss
@@ -37,3 +37,23 @@
         clear: both;
     }
 }
+
+@mixin keyframes($animation-name) {
+    @keyframes #{$animation-name} {
+        @content;
+    }
+}
+
+@mixin animation($animate...) {
+    $max: length($animate);
+    $animations: '';
+
+    @for $i from 1 through $max {
+        $animations: #{$animations + nth($animate, $i)};
+
+        @if $i < $max {
+            $animations: #{$animations + ", "};
+        }
+    }
+    animation: $animations;
+}
