--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -75,6 +75,10 @@
                     <span igxLabel>Hidden</span>
                     <igx-switch [(ngModel)]="col.hidden"></igx-switch>
                 </div>
+                <div class="switch-group">
+                    <span igxLabel>Movable</span>
+                    <igx-switch [(ngModel)]="col.movable"></igx-switch>
+                </div>
             </div>
         </div>
         
