(ADD) Exit animation mixins

--- a/src/themes/utilities/animations/_index.scss
+++ b/src/themes/utilities/animations/_index.scss
@@ -24,3 +24,15 @@
 @import 'entrances/swirl';
 
 /** Exit Animations **/
+@import 'exits/bounce';
+@import 'exits/fade';
+@import 'exits/flicker';
+@import 'exits/flip';
+@import 'exits/puff';
+@import 'exits/roll';
+@import 'exits/rotate';
+@import 'exits/scale';
+@import 'exits/slide';
+@import 'exits/slit';
+@import 'exits/swing';
+@import 'exits/swirl';
