--- a/src/checkbox/checkbox.component.html
+++ b/src/checkbox/checkbox.component.html
@@ -11,6 +11,11 @@
         (focus)="onFocus($event)"
         (blur)="onBlur($event)">
     <label class="igx-control__label" [attr.for]="id">
+        <svg class="tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 22">
+            <g fill="none" fill-rule="evenodd">
+                <path class="tick__mark" d="M2 10.8l5 5L18.8 4"/>
+            </g>
+        </svg>
         <ng-content></ng-content>
     </label>
 </div>
