--- a/src/themes/material/extends/_radio.scss
+++ b/src/themes/material/extends/_radio.scss
@@ -25,17 +25,17 @@
 }
 
 %igx-radio-lbl-notchecked--before {
-    transform: scale(0);
+    transform: scale3d(0, 0, 0);
 }
 
 %igx-radio-lbl-notchecked--after {
-    border: 2px solid $radio-empty-color;
+    border: $radio-border-style $radio-empty-color;
 }
 
 %igx-radio-lbl-checked--before {
     border: $radio-border;
     background-color: $radio-fill-color;
-    transform: scale(.5);
+    transform: scale3d(.5, .5, .5);
 }
 
 %igx-radio-lbl-checked--after {
@@ -48,14 +48,14 @@
 }
 
 %igx-radio-lbl-notchecked--disabled-after {
-    border: 2px solid $input-disabled-color;
+    border: $radio-border-style $input-disabled-color;
 }
 
 %igx-radio-lbl-checked--disabled-before {
     background-color: $input-disabled-color;
-    border: 2px solid $input-disabled-color;
+    border: $radio-border-style $input-disabled-color;
 } 
 
 %igx-radio-lbl-checked--disabled-after {
-    border: 2px solid $input-disabled-color;
+    border: $radio-border-style $input-disabled-color;
 }
