--- a/src/themes/utilities/animations/_utils.scss
+++ b/src/themes/utilities/animations/_utils.scss
@@ -24,10 +24,20 @@ $ease-in-out-expo: cubic-bezier(1.000, 0.000, 0.000, 1.000);
 $ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.150, 0.860);
 $ease-in-out-back: cubic-bezier(0.680, -0.550, 0.265, 1.550);
 
+$keyframes: ();
 
-@mixin keyframes($animation-name) {
-    @keyframes #{$animation-name} {
-        @content;
+@mixin keyframes($name) {
+    $keyframe: map-get($keyframes, $name);
+
+    @if $keyframe == null {
+        $keyframe: unique-id();
+        $keyframes: map-merge($keyframes, (#{$name}: $keyframe)) !global;
+
+        @at-root {
+            @keyframes #{$name} {
+                @content;
+            }
+        }
     }
 }
 
