--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -5,94 +5,94 @@
             <!--Components-->
             <span class="nav-item header">Components</span>
 
-            <span class="nav-item" routerLink="/avatar">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/avatar">
                 <i class="material-icons">account_circle</i>
                 <span>Avatar</span>
             </span>
                         
-            <span class="nav-item" routerLink="/avatar">
+            <span class="nav-item">
                 <i class="material-icons">error</i>
                 <span>Badge</span>
             </span>
 
-            <span class="nav-item" routerLink="/buttonGroup">                
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttonGroup">                
                 <i class="material-icons">group_work</i>
                 <span>Button Group</span>
             </span>
 
-            <span class="nav-item" routerLink="/card">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/card">
                 <i class="material-icons">home</i>
                 <span>Card</span> 
             </span>
 
-            <span class="nav-item" routerLink="/carousel">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/carousel">
                 <i class="material-icons">view_carousel</i>
                 <span>Carousel</span>
             </span>
 
-            <span class="nav-item" routerLink="/grid">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/grid">
                 <i class="material-icons">view_column</i>
                 <span>Grid</span> 
             </span>
 
-            <span class="nav-item" routerLink="/dialog">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/dialog">
                 <i class="material-icons">all_out</i>
                 <span>Dialog</span> 
             </span>
             
-            <span class="nav-item" routerLink="/inputs">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/inputs">
                 <i class="material-icons">web</i>
                 <span>Forms</span>
             </span>
 
-            <span class="nav-item" routerLink="/icon">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/icon">
                 <i class="material-icons">android</i>
                 <span>Icon</span> 
             </span>
 
-            <span class="nav-item" routerLink="/list">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/list">
                 <i class="material-icons">list</i>
                 <span>List</span>
             </span>
 
-            <span class="nav-item" routerLink="/navbar">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navbar">
                 <i class="material-icons">arrow_back</i>
                 <span>Navbar</span>  
             </span>
 
-            <span class="nav-item" routerLink="/navigation-drawer">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navigation-drawer">
                 <i class="material-icons">menu</i>
                 <span>Navdrawer</span>
             </span>
 
-            <span class="nav-item" routerLink="/progressbar">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/progressbar">
                 <i class="material-icons">poll</i>
                 <span>Progress Indicators</span> 
             </span>
 
-            <span class="nav-item" routerLink="/range">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/range">
                 <i class="material-icons">linear_scale</i>
                 <span>Range</span> 
             </span>
 
-            <span class="nav-item" routerLink="/snackbar">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/snackbar">
                 <i class="material-icons">feedback</i>
                 <span>Snackbar</span> 
             </span>
 
-            <span class="nav-item" routerLink="/tabbar">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/tabbar">
                 <i class="material-icons">tab</i>
                 <span>Tabbar</span>
             </span>
 
-            <span class="nav-item" routerLink="/toast">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/toast">
                 <i class="material-icons">android</i>
                 <span>Toast</span> 
             </span>
 
             <!--Directives-->
             <span class="nav-item header">Directives</span>
-            <span class="nav-item" routerLink="/buttons">                
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttons">                
                 <i class="material-icons">radio_button_unchecked</i>
                 <span>Buttons</span>
             </span>
@@ -104,7 +104,7 @@
 
             <!--Directives-->
             <span class="nav-item header">Utils</span>
-            <span class="nav-item" routerLink="/data-operations">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/data-operations">
                 <i class="material-icons">data_usage</i>
                 <span>Data Operations</span> 
             </span>
