--- a/src/avatar/avatar.component.html
+++ b/src/avatar/avatar.component.html
@@ -1,4 +1,4 @@
-<div class="igx-avatar" aria-label="avatar" role="img">
+<div class="igx-avatar igx-avatar--{{size}}" aria-label="avatar" role="img">
     <img #image *ngIf="src || initials" src="{{src}}" class="igx-avatar--image igx-avatar--{{size}}" [class.igx-avatar--rounded]="isRounded"
         [style.backgroundColor]="bgColor" [attr.aria-roledescription]="roleDescription" />
     <span *ngIf="!src && !initials" class="igx-avatar--{{size}} igx-avatar--icon" [class.igx-avatar--rounded]="isRounded"
